Added user browse, added temperature recording
